# simple-text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/: additional_commands.h  application.h  buffer.h  caesar_cipher.h  commands_log.h  cursor.h  edit_commands.h  editor.h  file_commands.h  file_handler.h  main_test.h  parser.h  text_commands.h  text_storage.h
src/: additional_commands.cpp  application.cpp  buffer.cpp  caesar_cipher.cpp  commands_log.cpp  cursor.cpp  edit_commands.cpp  editor.cpp  file_commands.cpp  file_handler.cpp  main.cpp  parser..cpp  parser.cpp  text_commands.cpp  text_storage.cpp
test/: additional_commands_test.cpp  buffer_test.cpp  caesar_cipher_test.cpp  commands_log_test.cpp  cursor_test.cpp  edit_commands_test.cpp  editor_test.cpp  file_commands_test.cpp  file_handler_test.cpp  main_test.cpp  parser_test.cpp  text_storage_test.cpp
